# neo-robot

./: .gitattributes  .gitignore  ROADMAP.md
.github/workflows/: deploy-hf.yml
firmware/: .gitignore  platformio.ini
firmware/src/: main.cpp
firmware/src/audio/: microphone.cpp  microphone.h  speaker.cpp  speaker.h
firmware/src/commands/: dispatcher.cpp  dispatcher.h  inference.cpp  inference.h
firmware/src/demos/bocina/: main_demo_bocina.cpp
firmware/src/demos/ojos/: main_demo_ojos.cpp
firmware/src/display/: face.cpp  face.h  oled.cpp  oled.h
firmware/src/input/: trigger.cpp  trigger.h
firmware/src/network/: wifi_manager.cpp  wifi_manager.h  ws_client.cpp  ws_client.h
firmware/test/: test_placeholder.cpp
firmware/tools/: gen_frase.py
servidor/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  gen_test_wav.py  pipeline.py  pyproject.toml  test_consulta.py
servidor/src/commands/: base.py  clima.py  cripto.py  hola.py  noticias.py  router.py  toque.py
servidor/src/llm/: client.py
servidor/src/server/: ws_server.py
servidor/src/stt/: transcriber.py
servidor/src/tts/: synthesizer.py
servidor/tests/: test_ws_echo.py
