[project]
name = "neo-servidor"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "groq>=0.9.0",
    "edge-tts>=6.1.9",
    "miniaudio>=1.58",
    "requests>=2.31.0",
    "websockets>=12.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
local = [
    "faster-whisper>=1.0.0",
    "ollama>=0.2.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
